k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: streamflix
  labels:
    name: streamflix
    environment: production
